[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Enemy Spawner.gd" type="Script" id=1]
[ext_resource path="res://env/Space.tres" type="Environment" id=2]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://styles/Panel.tres" type="StyleBox" id=4]
[ext_resource path="res://fonts/FreeSansBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/FreeMono.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://styles/Button-Clicked.tres" type="StyleBox" id=7]
[ext_resource path="res://styles/Button.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[node name="Main Scene" type="Spatial"]
script = ExtResource( 3 )
rotateSpeed = 5.0

[node name="Enemy Spawner" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -350 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="Enemy Spawner"]
wait_time = 2.0
autostart = true

[node name="Boss" type="Timer" parent="Enemy Spawner"]
wait_time = 20.0
autostart = true

[node name="Environment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
far = 400.0

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -936.5
margin_top = -500.0
margin_right = 936.5
margin_bottom = 500.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -533.5
margin_right = 533.5
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
text = "Space Shooter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -280.0
margin_right = 1100.0
margin_bottom = -124.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrades" type="Button" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -100.0
margin_right = 1100.0
margin_bottom = 56.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = SubResource( 2 )
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="achievements" type="Button" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 80.0
margin_right = 1100.0
margin_bottom = 236.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = SubResource( 2 )
text = "Achievements"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 260.0
margin_right = 1100.0
margin_bottom = 416.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingScreen" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -476.0
margin_top = -87.0
margin_right = 476.0
margin_bottom = 87.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="LoadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -391.0
margin_top = -53.0
margin_right = 391.0
margin_bottom = 53.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Enemy Spawner/Timer" to="Enemy Spawner" method="_on_Timer_timeout"]
[connection signal="timeout" from="Enemy Spawner/Boss" to="Enemy Spawner" method="_on_Boss_timeout"]
[connection signal="pressed" from="Panel/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="Panel/achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="Panel/quit" to="." method="_on_quit_pressed"]
